<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
    <TextView
        android:id="@+id/price_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/price_label" />
    
    <LinearLayout
        android:id="@+id/price_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/price_label"
        android:orientation="horizontal" >
    
        <TextView
            android:id="@+id/between_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/basic_text_padding"
            android:paddingRight="@dimen/basic_text_padding"
            android:text="@string/price_label_between" />
        
        <EditText 
            android:id="@+id/from_price"
            android:layout_width="65dip"
            android:layout_height="45dip"
            android:inputType="text" />
        
        <TextView
            android:id="@+id/and_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/basic_text_padding"
            android:paddingRight="@dimen/basic_text_padding"
            android:text="@string/price_label_and" />
        
        <EditText 
            android:id="@+id/to_price"
            android:layout_width="65dip"
            android:layout_height="45dip"
            android:inputType="text" />

    </LinearLayout>
    
    
    <TextView
        android:id="@+id/location_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="20dip"
        android:textStyle="bold"
        android:text="@string/location_label"
        android:layout_below="@id/price_settings" />
    
    <LinearLayout 
        android:id="@+id/location_settings"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/location_label" >
        
        <TextView 
            android:id="@+id/location_information"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:text="@string/location_information_label" />
        
        <Button 
            android:id="@+id/show_map_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:text="@string/show_map_button_text"
            android:layout_gravity="center" />
        
        <TextView
            android:id="@+id/location_chosen"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/current_location_label"
            android:gravity ="center"
            android:background="#C8C8C8" />
   
    </LinearLayout>

</RelativeLayout>