<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
	<RelativeLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
	    android:padding="10dp" >
	    
	    <ImageView
	        android:id="@+id/desc_item_img"
	        android:layout_width="100dp"
	        android:layout_height="100dp"
	        android:contentDescription="@string/splash_logo_content" />
	    
	    <LinearLayout 
	        android:id="@+id/desc_item_basic_info"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:orientation="vertical"
	        android:padding="10dp"
	        android:layout_toRightOf="@id/desc_item_img" >
	        
	        <TextView 
	            android:id="@+id/desc_item_name"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content" />
	        
	        <TextView 
	            android:id="@+id/desc_item_type"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:textColor="#C8C8C8"
	            android:textSize="12sp" />
	        
	        <ImageView 
	            android:id="@+id/desc_item_rating"
	            android:layout_width="45dp"
	            android:layout_height="10dp"
	            android:paddingBottom="10dp"
	            android:contentDescription="@string/desc_img_content" />
	        
	        <TextView 
	            android:id="@+id/desc_item_location"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content" />
	        
	        <TextView 
	            android:id="@+id/desc_item_price"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content" />
	        
	        <TextView 
	            android:id="@+id/desc_promo_notif"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:textColor="#C8C8C8"
	            android:textSize="12sp" />
	        
	    </LinearLayout>
	
	    <TextView
	        android:id="@+id/description_label"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/description_label"
	        android:layout_alignParentLeft="true"
	        android:layout_below="@+id/desc_item_basic_info"
	        android:paddingTop="20dp" />
	
	    <TextView
	        android:id="@+id/description_text"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_below="@+id/description_label" />
	    
	    <TextView
	        android:id="@+id/amneties_label"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/amneties_available_label"
	        android:layout_below="@+id/description_text"
	        android:paddingTop="20dp" />
	
	    <TextView
	        android:id="@+id/amneties_text"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_below="@+id/amneties_label" />
	
	    <Button
	        android:id="@+id/show_item_in_map_button"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/amneties_text"
	        android:text="@string/show_in_map_button_text" />
	    
	</RelativeLayout>
</ScrollView>