<?xml version="1.0" encoding="utf-8"?>

<!-- This layout the header of the search page -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SimpleSearchActivity" >

    <LinearLayout
        android:id="@+id/search_items"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/search_input"
            android:layout_width="241dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text" >

            <requestFocus />
        </EditText>

        <ImageButton 
            android:id="@+id/search_button"
            android:layout_width="0dp"
            android:layout_height="45dip"
            android:layout_weight="1"
            android:background="@drawable/ic_search_button"
            android:contentDescription="@string/search_icon_image_content"
            android:onClick="onSearchButtonClicked" />
        
    </LinearLayout>

    <Button
        android:id="@+id/advanced_search_button"
        android:layout_width="fill_parent"
        android:layout_height="34dp"
        android:layout_below="@id/search_items"
        android:text="@string/advanced_search_button_name"
        android:onClick="onAdvancedSearchButtonClicked" />

    <ListView
        android:id="@+id/search_list_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/advanced_search_button"
        android:visibility="visible" >

    </ListView>
    
    
    <!-- Used when there's no search results -->
    
    <TextView
        android:id="@+id/no_search_result_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textColor="#C8C8C8"
        android:layout_below="@id/advanced_search_button"
        android:text="@string/no_res_text"
        android:visibility="invisible" />
    
    <!-- Advanced Search Settings -->
    
    <include layout="@layout/advanced_search"
        android:id="@+id/advanced_search_settings"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/advanced_search_button"
        android:visibility="invisible" />
</RelativeLayout>